#23733 : Implementing SonarQube feedback.